--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
-"Cleaned_data"/*.xlsx linguist-language=Excel
-"Cleaned_data"/*.xlsx linguist-detectable=true
+*.xlsx linguist-language=Excel
+*.xlsx linguist-detectable=true
+
+*.xls linguist-language=Excel
+*.xls linguist-detectable=true
+
+*.csv linguist-language=CSV
+*.csv linguist-detectable=true
